# ML-2026

./: README.md  main.py  pyproject.toml
Info/: info.py
Week10/: first.ipynb
Week11/: desicion_tree.ipynb
Week2/: first_notebook.ipynb
Week3/: llm_chat.ipynb  llm_ui.ipynb
Week4/: chat rag.ipynb  document_preparation.ipynb  embedding_test.ipynb  vectorstore.ipynb
Week5/: desc_stat.ipynb  gold_price.ipynb
Week6/: first.ipynb
Week7/: classification_modeling.ipynb
Week8/: classification_modeling.ipynb
Week9/: classification_modeling.ipynb  logistic_regression.py
